--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <strong>Menu</strong>
         </div>
         <div>
-          <img src="assets/Tech News.svg" alt="TechNews logo" />
+          <img src="assets/icons/Logo.svg" alt="TechNews logo" />
         </div>
         <div>
           <strong>Buscar</strong>
